--- a/src/assets/genericStyle.css
+++ b/src/assets/genericStyle.css
@@ -14,7 +14,8 @@ body {
 }
 
 input:not([type='radio']),
-textarea {
+textarea,
+select {
     padding: 10px 12px 10px 12px;
     border: 1px solid lightgrey;
     border-radius: 2px;
@@ -32,7 +33,7 @@ textarea:focus {
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-    border: 1px solid #304FFE;
+    border: 1px solid #858585;
     outline-width: 0
 }
 
