--- a/src/assets/footer.css
+++ b/src/assets/footer.css
@@ -1,6 +1,6 @@
 .footer_custom {
     margin-top: 70px;
-    background-color: #FFFFFF;
+    background-color: #6d6cba;
     padding: 20px 40px;
     color: #000000;
 }
