--- a/src/assets/perfil.css
+++ b/src/assets/perfil.css
@@ -1,14 +1,15 @@
-
 /* Icons */
 
-.icon_perfil{
+.icon_perfil {
     height: 30px;
     width: 30px;
     margin: 0;
     padding: 0;
 }
 
+
 /* Cards */
+
 .main-body {
     padding: 15px;
     padding-top: 100px;
@@ -20,12 +21,11 @@
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: #f3f3fb;
     background-clip: border-box;
-    border: 0 solid rgba(0,0,0,.125);
+    border: 0 solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
-
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
 }
 
 .gutters-sm {
@@ -33,7 +33,8 @@
     margin-left: -8px;
 }
 
-.gutters-sm>.col, .gutters-sm>[class*=col-] {
+.gutters-sm>.col,
+.gutters-sm>[class*=col-] {
     padding-right: 8px;
     padding-left: 8px;
 }
